--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
+
+  "singleQuote": false,
   "semi": false,
-  "singleQuote": true,
-  "printWidth": 100
+  "trailingComma": "all",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "arrowParens": "always",
+
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
