--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "unplugin-vue-components": "^30.0.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.1.5"
   }
 }
